buildscript {
    repositories {
        maven {
            url 'https://plugins.gradle.org/m2/'
        }
    }
    dependencies {
        classpath 'org.jfrog.buildinfo:build-info-extractor-gradle:4.10.0'
    }
}

apply plugin: 'java'
apply plugin: 'maven'
apply plugin: 'signing'
apply plugin: 'maven-publish'
apply plugin: 'com.jfrog.artifactory'

group = 'com.dotcms'
version = '1.0'

repositories {
  mavenCentral()
}

compileJava {
  sourceCompatibility = 11
  targetCompatibility = 11
}

dependencies {
  compile group: 'org.apache.tomcat', name: 'tomcat-catalina', version: '9.0.41'
  compile group: 'redis.clients', name: 'jedis', version: '4.4.1'
  compile group: 'org.apache.commons', name: 'commons-pool2', version: '2.2'
  compile group: 'commons-codec', name: 'commons-codec', version: '1.9'
  implementation 'redis.clients:jedis:4.4.1'

  testCompile group: 'org.apache.tomcat', name: 'tomcat-coyote', version: '9.0.41'
}

task javadocJar(type: Jar, dependsOn: javadoc) {
  classifier = 'javadoc'
  from 'build/docs/javadoc'
}

task sourcesJar(type: Jar) {
  from sourceSets.main.allSource
  classifier = 'sources'
}

artifacts {
  archives jar

  archives javadocJar
  archives sourcesJar
}

task wrapper(type: Wrapper) {
    gradleVersion = '4.10.2'
}

tasks.withType(JavaCompile) {
    options.deprecation = true
}

// Artifactory configuration
artifactory {
    contextUrl = 'https://repo.dotcms.com/artifactory'
    publish {
        repository {
            repoKey = 'libs-release-local'
            username = System.getenv("DOTCMS_ARTIFACTORY_USERNAME")
            password = System.getenv("DOTCMS_ARTIFACTORY_PASSWORD")
        }
        defaults {
            publications('mavenJava')
            publishArtifacts = true
            publishPom = true
        }
    }
}

// Maven configuration
publishing {
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}
